fix menu visibility on mobile

--- a/themes/nycnerd-sqsp/static/css/style.css
+++ b/themes/nycnerd-sqsp/static/css/style.css
@@ -291,6 +291,10 @@ body.page #pageWrapper {
     padding: 0 20px;
   }
 
+  #topNav {
+    display: none;
+  }
+
   .ctrl-button.menu {
     display: flex;
     align-items: center;
